tests/pld-test-output/tests-Init-01_fail_semantic/gcc-compile.txt
input.c: In function ‘main’:
input.c:5:7: error: redefinition of ‘a’
   int a = b;
       ^
input.c:3:6: note: previous definition of ‘a’ was here
  int a=42;
      ^

return code: 1
